--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg custom-navbar">
     <div class="container">
-        <a class="navbar-brand" href="#">My Biography</a>
+        <a class="navbar-brand" href="#">Nischal Silwal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
